[package]
name = "wol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3", default-features = false, features = ["macros"] }
anyhow = "1.0"
base64 = "0.21"
clap = { version = "4.3", features = ["derive"] }
config = { version = "0.13", default-features = false, features = [
  "ron",
  "yaml",
  "yaml-rust",
] }
dotenv = "0.15"
env_logger = "0.10"
futures-util = { version = "0.3", default-features = false }
lazy_static = "1.4"
log = "0.4"
rust-embed = { version = "6.7", features = ["mime-guess"] }
serde = "1.0"
serde_yaml = "0.9"
surge-ping = "0.8"
